# IOT_QT

./: CMakeLists.txt  README.md  res.qrc
customControl/: CMakeLists.txt  circleProgress.cpp  circleprogress.h  myswitchbutton.cpp  myswitchbutton.h  weatherinfo.cpp  weatherinfo.h
microcomputer/ESP8266_nodemcu/: ESP8266_nodemcu.ino
py_server/: test_server.py
windows/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
